<resources>
    <string name="app_name">WeatherApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home_title">Main</string>
    <string name="settings_title">Settings</string>
    <string name="about_title">About App</string>
    <string name="temperature_navbar" translatable="false">N/A</string>

    <string name="hello_world">Hello, world!</string>

    <string name="hello_blank_fragment">WeatherApp</string>
    <string name="time_schedule_preference_summary">Update weather every</string>
    <string name="moscow">Moscow</string>
    <string name="time_preference_key" translatable="false">time_preference</string>
    <string name="default_time_prefernce_value" translatable="false">15</string>
    <string name="humidity_fmt_string">%.0f%%</string>
    <string name="pressure_fmt_string">%.0f</string>
    <!--<string name="pressure_fmt_string">%.1f mm Hg</string>-->
    <string name="temperature_fmt_string">%.0f°</string>
    <string name="wind_fmt_string">%.1f m/s</string>
    <string name="refresh_weather_setting">Refresh weather every</string>

    <string name="weatherIcon_description_text">Weather icon</string>
    <string name="windIcon_description_text">Wind icon</string>
    <string name="humidityIcon_description_text">Humidity icon</string>
    <string name="pressureIcon_description_text">Pressure icon</string>
    <string name="yandexIcon_description_text">Yandex icon</string>

    <string name="wind_string">Wind</string>
    <string name="pressure_string">Pressure</string>
    <string name="humidity_string">Humidity</string>

    <string name="icon_author_credit">Icons made by RNS from www.flaticon.com is licensed by CC 3.0 BY</string>

    <string name="autoupdate_weather_text">Auto-update</string>

    <string name="favourite_title">Cities</string>
    <string name="weather_title">Weather</string>

    <string name="about_button">About application</string>

    <string name="cities_hint">Enter city name</string>

    <string name="city_deleted">City deleted</string>
    <string name="city_deleted_error">Delete error</string>

    <string name="error_no_internet">Error. No internet.</string>
    <string name="error_cant_add_city">Error adding</string>

    <string name="forecast_text_date">Date</string>
    <string name="forecast_text_type">Weather type</string>
    <string name="forecast_text_temp">Temperature</string>

    <string name="about_text">Authors: Denis Verentsov and Michail Levchenko</string>
</resources>
