<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:id="@+id/aboutFragment"
    android:background="#ffffff">

    <ImageView
        android:contentDescription="@string/weather_title"
        android:id="@+id/animated_parrot"
        android:background="@drawable/parrot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"/>
    <TextView
        android:textColor="@color/colorTopNight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@+id/animated_parrot"
        android:id="@+id/textView4"/>

    <TextView
        android:gravity="center"
        android:textColor="@color/colorTopNight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_text"

        android:id="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/icon_author_credit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.5"/>

</android.support.constraint.ConstraintLayout>
