<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weatherFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cityTextView"
            style="@style/Weather_city_name_style"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/degreesTextView"
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/extra_large_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iconWeatherImageView"
            tools:text="23°"/>

        <ImageView
            android:id="@+id/iconWeatherImageView"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_margin="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/weatherIcon_description_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityTextView"
            tools:background="@drawable/drizzle"/>

        <TextView
            android:id="@+id/justHumidityText"
            style="@style/Weather_small_text_style"
            android:layout_marginTop="8dp"
            android:text="@string/humidity_string"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/degreesTextView"/>

        <ImageView
            android:id="@+id/humidityImageView"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_humidity"
            android:contentDescription="@string/humidityIcon_description_text"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/justHumidityText"
            tools:layout_editor_absoluteX="62dp"/>

        <TextView
            android:id="@+id/humidityTextView"
            style="@style/Weather_small_text_style"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/humidityImageView"
            tools:layout_editor_absoluteX="63dp"
            tools:text="146%"/>

        <TextView
            android:id="@+id/justWindText"
            style="@style/Weather_small_text_style"
            android:layout_marginTop="8dp"
            android:text="@string/wind_string"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/degreesTextView"
            tools:layout_editor_absoluteX="175dp"/>

        <ImageView
            android:id="@+id/windImageView"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_wind"
            android:contentDescription="@string/windIcon_description_text"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/justWindText"
            tools:layout_editor_absoluteX="175dp"/>

        <TextView
            android:id="@+id/windTextView"
            style="@style/Weather_small_text_style"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/windImageView"
            tools:layout_editor_absoluteX="165dp"
            tools:text="1.5 m/s"/>

        <TextView
            android:id="@+id/justPressureText"
            style="@style/Weather_small_text_style"
            android:layout_marginTop="8dp"
            android:text="@string/pressure_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/degreesTextView"
            tools:layout_editor_absoluteX="296dp"/>

        <ImageView
            android:id="@+id/pressureImageView"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_pressure"
            android:contentDescription="@string/pressureIcon_description_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/justPressureText"
            tools:layout_editor_absoluteX="317dp"/>

        <TextView
            android:id="@+id/pressureTextView"
            style="@style/Weather_small_text_style"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/pressureImageView"
            tools:layout_editor_absoluteX="317dp"
            tools:text="756"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.SwipeRefreshLayout>