<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/swipetoRefreshLayout"
    android:background="@drawable/gradient_night"
    xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

            android:id="@+id/weatherFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cityTextView"
                style="@style/Weather_city_name_style"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/degreesTextView"
                android:layout_width="wrap_content"
                android:layout_height="88dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/extra_large_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iconWeatherImageView"
                tools:text="23°"/>

            <ImageView
                android:id="@+id/iconWeatherImageView"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_margin="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/weatherIcon_description_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cityTextView"
                tools:background="@drawable/drizzle"/>

            <TextView
                android:id="@+id/justHumidityText"
                style="@style/Weather_small_elements_text_style"
                android:layout_marginTop="8dp"
                android:text="@string/humidity_string"
                app:layout_constraintEnd_toStartOf="@+id/guideline1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/degreesTextView"/>

            <ImageView
                android:id="@+id/humidityImageView"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_humidity"
                android:contentDescription="@string/humidityIcon_description_text"
                app:layout_constraintEnd_toStartOf="@+id/guideline1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/justHumidityText"
                tools:layout_editor_absoluteX="62dp"/>

            <TextView
                android:id="@+id/humidityTextView"
                style="@style/Weather_small_elements_text_style"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/humidityImageView"
                tools:layout_editor_absoluteX="63dp"
                tools:text="146%"/>

            <TextView
                android:id="@+id/justWindText"
                style="@style/Weather_small_elements_text_style"
                android:layout_marginTop="8dp"
                android:text="@string/wind_string"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/degreesTextView"
                tools:layout_editor_absoluteX="175dp"/>

            <ImageView
                android:id="@+id/windImageView"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_wind"
                android:contentDescription="@string/windIcon_description_text"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/justWindText"
                tools:layout_editor_absoluteX="175dp"/>

            <TextView
                android:id="@+id/windTextView"
                style="@style/Weather_small_elements_text_style"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/windImageView"
                tools:layout_editor_absoluteX="165dp"
                tools:text="1.5 m/s"/>

            <TextView
                android:id="@+id/justPressureText"
                style="@style/Weather_small_elements_text_style"
                android:layout_marginTop="8dp"
                android:text="@string/pressure_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/degreesTextView"
                tools:layout_editor_absoluteX="296dp"/>

            <ImageView
                android:id="@+id/pressureImageView"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_pressure"
                android:contentDescription="@string/pressureIcon_description_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/justPressureText"
                tools:layout_editor_absoluteX="317dp"/>

            <TextView
                android:id="@+id/pressureTextView"
                style="@style/Weather_small_elements_text_style"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/pressureImageView"
                tools:layout_editor_absoluteX="317dp"
                tools:text="756"/>

            <android.support.constraint.Guideline
                android:id="@+id/guideline1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.33"/>

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.66"/>



            <!--Testing mix-->
            <TextView
                style="@style/Weather_small_elements_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Время"
                app:layout_constraintEnd_toStartOf="@+id/guideline1"
                app:layout_constraintHorizontal_bias="0.458"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/humidityTextView"
                android:id="@+id/textView2"/>
            <TextView
                style="@style/Weather_small_elements_text_style"
                android:text="Тип погоды"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/windTextView"
                android:id="@+id/textView5"/>
            <TextView
                style="@style/Weather_small_elements_text_style"
                android:text="Температура"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.619"
                app:layout_constraintStart_toEndOf="@+id/guideline2"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/pressureTextView"
                android:id="@+id/textView6"/>


            <TextView
                style="@style/Weather_small_elements_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guideline1"
                app:layout_constraintStart_toStartOf="parent"
                android:text="00:00 21.12"
                app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:id="@+id/textView4"/>

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:background="@drawable/thunderstorm"
                tools:layout_editor_absoluteX="175dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/guideline1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:id="@+id/imageView3"/>

            <TextView
                style="@style/Weather_small_elements_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guideline2"
                android:text="90°"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:id="@+id/textView9"/>


            <TextView
                style="@style/Weather_small_elements_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guideline1"
                app:layout_constraintStart_toStartOf="parent"
                android:text="06:00 21.12"
                android:id="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:layout_marginTop="16dp"
                app:layout_constraintHorizontal_bias="0.5"/>

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:background="@drawable/cloudy"
                app:layout_constraintStart_toEndOf="@+id/guideline1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                android:id="@+id/imageView4"/>

            <TextView
                style="@style/Weather_small_elements_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guideline2"
                android:text="20°"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                android:id="@+id/textView10"/>



            <TextView
                style="@style/Weather_small_elements_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guideline1"
                app:layout_constraintStart_toStartOf="parent"
                android:text="12:00 21.12"
                android:id="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                android:layout_marginTop="16dp"
                app:layout_constraintHorizontal_bias="0.5"/>

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:background="@drawable/snowflake"
                app:layout_constraintStart_toEndOf="@+id/guideline1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                android:id="@+id/imageView5"/>

            <TextView
                style="@style/Weather_small_elements_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guideline2"
                android:text="-29°"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                android:id="@+id/textView12"/>

            <TextView
                style="@style/Weather_small_elements_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guideline1"
                app:layout_constraintStart_toStartOf="parent"
                android:text="18:00 21.12"
                android:id="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                android:layout_marginTop="16dp"
                app:layout_constraintHorizontal_bias="0.5"/>

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:background="@drawable/sun"
                app:layout_constraintStart_toEndOf="@+id/guideline1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView5"
                android:id="@+id/imageView6"/>

            <TextView
                style="@style/Weather_small_elements_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guideline2"
                android:text="30°"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                android:id="@+id/textView14"/>

        </android.support.constraint.ConstraintLayout>
</ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
